--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -16,6 +16,7 @@ include: "rules/inference.smk"
 include: "rules/verif.smk"
 include: "rules/report.smk"
 include: "rules/plot.smk"
+include: "rules/summary.smk"
 
 
 # optional messages, log and error handling
@@ -42,6 +43,10 @@ rule experiment_all:
     input:
         OUT_ROOT / f"results/{EXPERIMENT_HASH}/metrics/dashboard",
         OUT_ROOT / f"results/{EXPERIMENT_HASH}/metrics/plots",
+        expand(
+            OUT_ROOT / "data/runs/{run_id}/summary.md",
+            run_id=collect_all_candidates(),
+        ),
 
 
 rule showcase_all:
@@ -54,6 +59,10 @@ rule showcase_all:
             run_id=collect_all_candidates(),
             param=["TOT_PREC", "T_2M", "SP_10M"],
             region=["globe", "europe", "switzerland"],
+        ),
+        expand(
+            OUT_ROOT / "data/runs/{run_id}/summary.md",
+            run_id=collect_all_candidates(),
         ),
 
 
