--- a/config/showcase.yaml
+++ b/config/showcase.yaml
@@ -26,10 +26,10 @@ runs:
 
 baselines:
   - baseline:
-      baseline_id: COSMO-E
+      baseline_id: COSMO-E-1h
       label: COSMO-E
-      root: /store_new/mch/msopr/ml/COSMO-E
-      steps: 0/120/6
+      root: /store_new/mch/msopr/ml/COSMO-E_hourly
+      steps: 0/120/1
 
 stratification:
   regions:
@@ -43,7 +43,7 @@ stratification:
 
 analysis:
   label: COSMO KENDA
-  analysis_zarr: /scratch/mch/fzanetta/data/anemoi/datasets/mch-co2-an-archive-0p02-2015-2020-6h-v3-pl13.zarr
+  analysis_zarr: /scratch/mch/fzanetta/data/anemoi/datasets/mch-co2-an-archive-0p02-2015-2020-1h-v3-pl13.zarr
 
 locations:
   output_root: output/
