--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -37,14 +37,15 @@ onerror:
 # -----------------------------------------------------
 EXPERIMENT_HASH = short_hash_config()
 
-
+# TODO: target final scorefile instead of FF
 rule experiment_all:
     """Target rule for experiment workflow."""
     input:
         OUT_ROOT / f"results/{EXPERIMENT_HASH}/metrics/dashboard",
         OUT_ROOT / f"results/{EXPERIMENT_HASH}/metrics/plots",
         expand(
-            OUT_ROOT / "data/runs/{run_id}/summary.md",
+            OUT_ROOT / "data/runs/{run_id}/fdbk_files/verSYNOP_{init_time}.nc",
+            init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
         ),
 
@@ -104,11 +105,11 @@ rule verif_metrics_plot_all:
 
 # To run:  snakemake --cores 1 --configfile=config/forecasters.yaml verif_obs_all
 # clean: rm -rf ./output/data/runs/d0846032f/202001040000/mec ./output/data/runs/d0846032f/202001040000/folder_to_delete
-#            init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES], 
+#             init_time=202001040000,             run_id=collect_all_runs(),
 rule verif_obs_all:
     input:
         expand(
             rules.run_mec.output,
-            init_time=202001040000,
-            run_id=collect_all_runs(),
+            init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
+            run_id=collect_all_candidates(),
         )
