--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -19,6 +19,7 @@ include: "rules/plot.smk"
 include: "rules/summary.smk"
 include: "rules/verif_obs.smk"
 
+
 # optional messages, log and error handling
 # -----------------------------------------------------
 onstart:
@@ -37,6 +38,7 @@ onerror:
 # -----------------------------------------------------
 EXPERIMENT_HASH = short_hash_config()
 
+
 # TODO: target final scorefile instead of FF
 rule experiment_all:
     """Target rule for experiment workflow."""
@@ -46,6 +48,10 @@ rule experiment_all:
         expand(
             OUT_ROOT / "data/runs/{run_id}/fdbk_files/verSYNOP_{init_time}.nc",
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
+            run_id=collect_all_candidates(),
+        ),
+        expand(
+            OUT_ROOT / "data/runs/{run_id}/summary.md",
             run_id=collect_all_candidates(),
         ),
 
@@ -103,6 +109,7 @@ rule verif_metrics_plot_all:
             experiment=EXPERIMENT_HASH,
         ),
 
+
 # To run:  snakemake --cores 1 --configfile=config/forecasters.yaml verif_obs_all
 # clean: rm -rf ./output/data/runs/d0846032f/202001040000/mec ./output/data/runs/d0846032f/202001040000/folder_to_delete
 #             init_time=202001040000,             run_id=collect_all_runs(),
@@ -112,4 +119,4 @@ rule verif_obs_all:
             rules.run_mec.output,
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
-        )
+        ),
