--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -116,7 +116,7 @@ rule verif_metrics_plot_all:
 rule verif_obs_all:
     input:
         expand(
-            rules.run_mec.output,
+            rules.run_ffv2.output,
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
         ),
