update example configs

--- a/config/forecasters-co2.yaml
+++ b/config/forecasters-co2.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../workflow/tools/config.schema.json
 description: |
-  Basic config for showcasing M-2 interpolator on M-1 forecaster.
+  Evaluate skill of COSMO-E emulator (M-1 forecaster).
 
 dates:
   - 2020-02-03T00:00 # Storm Petra
@@ -8,21 +8,13 @@ dates:
   - 2020-10-01T00:00 # Storm Brigitte
 
 runs:
-  - interpolator:
-      mlflow_id: 8d1e0410ca7d4f74b368b3079878259a
-      label: M-2 interpolator
-      steps: 0/120/1
-      config: resources/inference/configs/sgm-interpolator-global_trimedge.yaml
-      forecaster:
-        mlflow_id: d0846032fc7248a58b089cbe8fa4c511
-        config: resources/inference/configs/sgm-forecaster-global_trimedge.yaml
-        steps: 0/120/6
-        extra_dependencies:
-          - git+https://github.com/ecmwf/anemoi-inference.git@main
+  - forecaster:
+      mlflow_id: d0846032fc7248a58b089cbe8fa4c511
+      label: M-1 forecaster
+      steps: 0/120/6
+      config: resources/inference/configs/sgm-forecaster-global_trimedge.yaml
       extra_dependencies:
-        - git+https://github.com/ecmwf/anemoi-inference.git@main
-        - torch-geometric==2.6.1
-        - anemoi-graphs==0.5.2
+        - git+https://github.com/ecmwf/anemoi-inference.git@0.8.3
 
 baselines:
   - baseline:
@@ -30,6 +22,10 @@ baselines:
       label: COSMO-E
       root: /store_new/mch/msopr/ml/COSMO-E
       steps: 0/120/6
+
+analysis:
+  label: COSMO KENDA
+  analysis_zarr: /scratch/mch/fzanetta/data/anemoi/datasets/mch-co2-an-archive-0p02-2015-2020-6h-v3-pl13.zarr
 
 stratification:
   regions:
@@ -41,10 +37,6 @@ stratification:
     - alpensuedseite
   root: /scratch/mch/bhendj/regions/Prognoseregionen_LV95_20220517
 
-analysis:
-  label: COSMO KENDA
-  analysis_zarr: /scratch/mch/fzanetta/data/anemoi/datasets/mch-co2-an-archive-0p02-2015-2020-6h-v3-pl13.zarr
-
 locations:
   output_root: output/
   mlflow_uri:
@@ -54,7 +46,7 @@ locations:
 profile:
   executor: slurm
   global_resources:
-    gpus: 15
+    gpus: 16
   default_resources:
     slurm_partition: "postproc"
     cpus_per_task: 1
@@ -62,5 +54,3 @@ profile:
     runtime: "1h"
     gpus: 0
   jobs: 50
-  batch_rules:
-    plot_forecast_frame: 24
