Revert change on coe baseline

--- a/config/forecasters-co2.yaml
+++ b/config/forecasters-co2.yaml
@@ -18,10 +18,10 @@ runs:
 
 baselines:
   - baseline:
-      baseline_id: COSMO-E-1h
+      baseline_id: COSMO-E
       label: COSMO-E
-      root: /store_new/mch/msopr/ml/COSMO-E_hourly
-      steps: 0/120/1
+      root: /store_new/mch/msopr/ml/COSMO-E
+      steps: 0/120/6
 
 analysis:
   label: COSMO KENDA
