--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -62,8 +62,15 @@ rule showcase_all:
             / "showcases/{run_id}/{init_time}/{init_time}_{param}_{region}.gif",
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
-            param=["TOT_PREC", "T_2M", "SP_10M"],
+            param=["T_2M", "SP_10M"],
             region=["globe", "europe", "switzerland"],
+        ),
+        expand(
+            OUT_ROOT / "showcases/{run_id}/{init_time}/{init_time}_{param}_{sta}.png",
+            init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
+            run_id=collect_all_candidates(),
+            param=["T_2M", "SP_10M"],
+            sta=["GVE", "KLO", "LUG"],
         ),
         expand(
             OUT_ROOT / "data/runs/{run_id}/summary.md",
