model data preparation for MEC

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -19,6 +19,8 @@ include: "rules/plot.smk"
 include: "rules/summary.smk"
 include: "rules/verif_obs.smk"
 
+# prefer one rule because snakemake complains about ambiguous rules (same output)
+ruleorder: prepare_inference_forecaster > prepare_inference_interpolator
 
 # optional messages, log and error handling
 # -----------------------------------------------------
@@ -46,14 +48,15 @@ rule experiment_all:
         OUT_ROOT / f"results/{EXPERIMENT_HASH}/metrics/dashboard",
         OUT_ROOT / f"results/{EXPERIMENT_HASH}/metrics/plots",
         expand(
+            OUT_ROOT / "data/runs/{run_id}/summary.md",
+            run_id=collect_all_candidates(),
+        ),
+        expand(
             OUT_ROOT / "data/runs/{run_id}/fdbk_files/verSYNOP_{init_time}.nc",
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
         ),
-        expand(
-            OUT_ROOT / "data/runs/{run_id}/summary.md",
-            run_id=collect_all_candidates(),
-        ),
+
 
 
 rule showcase_all:
@@ -111,8 +114,8 @@ rule verif_metrics_plot_all:
 
 
 # To run:  snakemake --cores 1 --configfile=config/forecasters.yaml verif_obs_all
-# clean: rm -rf ./output/data/runs/d0846032f/202001040000/mec ./output/data/runs/d0846032f/202001040000/folder_to_delete
-#             init_time=202001040000,             run_id=collect_all_runs(),
+# run_id=collect_all_runs(),      init_time=202001081200,
+
 rule verif_obs_all:
     input:
         expand(
