--- a/config/forecasters-ich1_proper_baseline.yaml
+++ b/config/forecasters-ich1_proper_baseline.yaml
@@ -1,11 +1,11 @@
 # yaml-language-server: $schema=../workflow/tools/config.schema.json
 description: |
-  Evaluate skill of ICON-CH1 single.
+  Evaluate skill of ICON emulator (M-1 forecaster).
 
 dates:
-  start: 2024-01-01T00:00
-  end: 2024-01-02T00:00
-  frequency: 6h
+  start: 2024-01-01T06:00
+  end: 2024-12-31T18:00
+  frequency: 36h
 
 runs:
   - forecaster:
@@ -16,9 +16,36 @@ runs:
       disable_local_eccodes_definitions: true
       extra_dependencies:
         - git+https://github.com/ecmwf/anemoi-inference.git@main
+  
+  - forecaster:
+      mlflow_id: 973b78b8b39543949abc2b154c5f98d9
+      label: stage_C_icon_1km_hidden_11
+      steps: 0/120/6
+      config: resources/inference/configs/sgm-forecaster-global-ich1.yaml
+      disable_local_eccodes_definitions: true
+      extra_dependencies:
+        - git+https://github.com/ecmwf/anemoi-inference.git@main
+  
+  - forecaster:
+      mlflow_id: 2ab92193ff36408f85b2261a16fd87a9
+      label: stage_C_icon_1km_hierarchical_2
+      steps: 0/120/6
+      config: resources/inference/configs/sgm-forecaster-global-ich1.yaml
+      disable_local_eccodes_definitions: true
+      extra_dependencies:
+        - git+https://github.com/ecmwf/anemoi-inference.git@main
+  
+  - forecaster:
+      mlflow_id: 5515982d90b94d229be0ff8864110c88
+      label: icon_1km_from_scratch
+      steps: 0/120/6
+      config: resources/inference/configs/sgm-forecaster-global-ich1.yaml
+      disable_local_eccodes_definitions: true
+      extra_dependencies:
+        - git+https://github.com/ecmwf/anemoi-inference.git@main
 
-baselines:
-- baseline:
+baselines:   
+  - baseline:
       baseline_id: ICON-CH1-EPS
       label: ICON-CH1-EPS
       root: /store_new/mch/msopr/ml/ICON-CH1-EPS
@@ -42,6 +69,7 @@ locations:
   output_root: output/
   mlflow_uri:
     - https://servicedepl.meteoswiss.ch/mlstore
+    - https://service.meteoswiss.ch/mlstore
     - https://mlflow.ecmwf.int
 
 profile:
