--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -105,6 +105,10 @@ rule run_inference_all:
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
         ),
+    output:
+        touch=OUT_ROOT / f"run_inference_all.{EXPERIMENT_HASH}.ok",
+    shell:
+        "touch {output.touch}"
 
 
 rule verif_metrics_all:
@@ -126,7 +130,7 @@ rule verif_metrics_plot_all:
 
 
 # To run:  snakemake --cores 1 --configfile=config/forecasters.yaml verif_obs_all
-# run_id=collect_all_runs(),      init_time=202001081200,
+# run_id=collect_all_runs(),
 
 rule verif_obs_all:
     input:
@@ -135,3 +139,5 @@ rule verif_obs_all:
             init_time=[t.strftime("%Y%m%d%H%M") for t in REFTIMES],
             run_id=collect_all_candidates(),
         ),
+        # wait for the global run_inference_all sentinel
+        OUT_ROOT / f"run_inference_all.{EXPERIMENT_HASH}.ok",
