Introduce Seasonal Stratification.

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -53,21 +53,23 @@ rule experiment_all:
             run_id=collect_all_candidates(),
         ),
         expand(
-            OUT_ROOT / "results/{experiment}/metrics/spatial/runs/{run_id}/{param}_{metric}_{region}_{leadtime}.png",
+            OUT_ROOT / "results/{experiment}/metrics/spatial/runs/{run_id}/{param}_{metric}_{region}_{season}_{leadtime}.png",
             run_id=collect_all_candidates(),
-            leadtime=[6, 12],
-            metric=["BIAS", "RMSE"],
-            param=["T_2M", "TOT_PREC"],
-            region=["switzerland", "switzerlandsmall"], 
+            leadtime=[6],
+            metric=["BIAS"],
+            param=["T_2M"],
+            region=["centraleurope", "switzerland"], 
+            season=["all", "DJF", "MAM", "JJA", "SON"], 
             experiment=EXPERIMENT_HASH
         ), 
         expand(
-            OUT_ROOT / "results/{experiment}/metrics/spatial/baselines/{baseline_id}/{param}_{metric}_{region}_{leadtime}.png",
+            OUT_ROOT / "results/{experiment}/metrics/spatial/baselines/{baseline_id}/{param}_{metric}_{region}_{season}_{leadtime}.png",
             baseline_id=collect_all_baselines(),
-            leadtime=[6, 12],
-            metric=["BIAS", "RMSE"],
-            param=["T_2M", "TOT_PREC"],
-            region=["switzerland", "switzerlandsmall"], 
+            leadtime=[6],
+            metric=["BIAS"],
+            param=["T_2M"],
+            region=["centraleurope", "switzerland"], 
+            season=["all", "DJF", "MAM", "JJA", "SON"], 
             experiment=EXPERIMENT_HASH
         )
 
