--- a/config/forecasters-co1e.yaml
+++ b/config/forecasters-co1e.yaml
@@ -10,14 +10,14 @@ dates:
 
 runs:
   - forecaster:
-      mlflow_id: 2174c939c8844555a52843b71219d425
+      checkpoint: 2174c939c8844555a52843b71219d425
       label: Cosmo 1km + era5 N320, finetuned on cerra checkpoint, lam resolution 11
       config: resources/inference/configs/sgm-forecaster-regional_fromtraining.yaml
       steps: 0/120/6
       inference_resources:
         gpu: 4
         tasks: 4
-      extra_dependencies:
+      extra_requirements:
         - git+https://github.com/ecmwf/anemoi-inference.git@main
 
 baselines:
@@ -43,9 +43,6 @@ stratification:
 
 locations:
   output_root: output/
-  mlflow_uri:
-    - https://servicedepl.meteoswiss.ch/mlstore
-    - https://mlflow.ecmwf.int
 
 profile:
   executor: slurm
