--- a/config/forecasters-co2.yaml
+++ b/config/forecasters-co2.yaml
@@ -9,11 +9,11 @@ dates:
 
 runs:
   - forecaster:
-      mlflow_id: d0846032fc7248a58b089cbe8fa4c511
+      checkpoint: https://mlflow.ecmwf.int/#/experiments/103/runs/d0846032fc7248a58b089cbe8fa4c511
       label: M-1 forecaster
       steps: 0/120/6
       config: resources/inference/configs/sgm-forecaster-global_trimedge.yaml
-      extra_dependencies:
+      extra_requirements:
         - git+https://github.com/ecmwf/anemoi-inference.git@0.8.3
 
 baselines:
@@ -39,9 +39,6 @@ stratification:
 
 locations:
   output_root: output/
-  mlflow_uri:
-    - https://servicedepl.meteoswiss.ch/mlstore
-    - https://mlflow.ecmwf.int
 
 profile:
   executor: slurm
