--- a/config/interpolators-co2.yaml
+++ b/config/interpolators-co2.yaml
@@ -13,36 +13,36 @@ dates:
 
 runs:
   - interpolator:
-      mlflow_id: 8d1e0410ca7d4f74b368b3079878259a
+      checkpoint: https://servicedepl.meteoswiss.ch/mlstore#/experiments/228/runs/8d1e0410ca7d4f74b368b3079878259a
       label: M-2 interpolator (KENDA)
       steps: 0/120/1
       config: resources/inference/configs/sgm-interpolator-global_trimedge_fromtest.yaml
       forecaster: null
-      extra_dependencies:
+      extra_requirements:
         - git+https://github.com/ecmwf/anemoi-inference.git@0.8.3
         - torch-geometric==2.6.1
         - anemoi-graphs==0.5.2
   - interpolator:
-      mlflow_id: 8d1e0410ca7d4f74b368b3079878259a
+      checkpoint: https://servicedepl.meteoswiss.ch/mlstore#/experiments/228/runs/8d1e0410ca7d4f74b368b3079878259a
       label: M-2 interpolator (M-1 forecaster)
       steps: 0/120/1
       config: resources/inference/configs/sgm-interpolator-global_trimedge.yaml
       forecaster:
-        mlflow_id: d0846032fc7248a58b089cbe8fa4c511
+        checkpoint: https://mlflow.ecmwf.int/#/experiments/103/runs/d0846032fc7248a58b089cbe8fa4c511
         config: resources/inference/configs/sgm-forecaster-global_trimedge.yaml
         steps: 0/120/6
-        extra_dependencies:
+        extra_requirements:
           - git+https://github.com/ecmwf/anemoi-inference.git@0.8.3
-      extra_dependencies:
+      extra_requirements:
         - git+https://github.com/ecmwf/anemoi-inference.git@0.8.3
         - torch-geometric==2.6.1
         - anemoi-graphs==0.5.2
   - forecaster:
-      mlflow_id: d0846032fc7248a58b089cbe8fa4c511
+      checkpoint: https://mlflow.ecmwf.int/#/experiments/103/runs/d0846032fc7248a58b089cbe8fa4c511
       label: M-1 forecaster
       config: resources/inference/configs/sgm-forecaster-global_trimedge.yaml
       steps: 0/120/6
-      extra_dependencies:
+      extra_requirements:
         - git+https://github.com/ecmwf/anemoi-inference.git@0.8.3
 
 baselines:
