--- a/config/forecasters-co2-disentangled.yaml
+++ b/config/forecasters-co2-disentangled.yaml
@@ -14,7 +14,9 @@ runs:
       config: resources/inference/configs/sgm-forecaster-global-disentangled.yaml
       steps: 0/120/6
       extra_requirements:
-        - git+https://github.com/ecmwf/anemoi-inference.git@main
+        - git+https://github.com/ecmwf/anemoi-inference.git@0.8.3
+        - earthkit-utils<0.2.0
+        - earthkit-data<0.19.0
         - git+https://github.com/MeteoSwiss/anemoi-core.git@2a90165e3f25defc55fbeb77f7b4ebfef685820d#subdirectory=models
 
   - forecaster:
@@ -23,7 +25,9 @@ runs:
       config: resources/inference/configs/sgm-forecaster-global-disentangled.yaml
       steps: 0/120/6
       extra_requirements:
-        - git+https://github.com/ecmwf/anemoi-inference.git@main
+        - git+https://github.com/ecmwf/anemoi-inference.git@0.8.3
+        - earthkit-utils<0.2.0
+        - earthkit-data<0.19.0
         - git+https://github.com/MeteoSwiss/anemoi-core.git@2a90165e3f25defc55fbeb77f7b4ebfef685820d#subdirectory=models
 
   - forecaster:
@@ -32,7 +36,9 @@ runs:
       config: resources/inference/configs/sgm-forecaster-global-disentangled.yaml
       steps: 0/120/6
       extra_requirements:
-        - git+https://github.com/ecmwf/anemoi-inference.git@main
+        - git+https://github.com/ecmwf/anemoi-inference.git@0.8.3
+        - earthkit-utils<0.2.0
+        - earthkit-data<0.19.0
         - git+https://github.com/MeteoSwiss/anemoi-core.git@2a90165e3f25defc55fbeb77f7b4ebfef685820d#subdirectory=models
 
 baselines:
