--- a/config/forecasters-ich1-oper.yaml
+++ b/config/forecasters-ich1-oper.yaml
@@ -18,11 +18,10 @@ runs:
       label: stage_C_icon_1km
       steps: 0/120/6
       config: resources/inference/configs/sgm-forecaster-global-ich1-oper.yaml
-      disable_local_eccodes_definitions: true
       extra_requirements:
         - earthkit-utils<0.2.0
         - earthkit-data<0.19.0
-        - git+https://github.com/ecmwf/anemoi-inference.git@main
+        - git+https://github.com/ecmwf/anemoi-inference.git@feat/patch-metadata-file
 
 baselines:
   - baseline:
