--- a/resources/inference/configs/sgm-forecaster-global-ich1.yaml
+++ b/resources/inference/configs/sgm-forecaster-global-ich1.yaml
@@ -25,6 +25,9 @@ output:
           - file:
               path: resources/icon-ch1-typeOfLevel=heightAboveGround.grib
               variables: [2t, 2d, 10u, 10v]
+          - file:
+              path: resources/icon-ch1-typeOfLevel=meanSea.grib
+              variables: [msl]
           - file: resources/icon-ch1-typeOfLevel=isobaricInhPa.grib
         post_processors:
           - extract_mask: # removes global points
@@ -44,11 +47,4 @@ output:
         - assign_mask: # fill local/global overlapping points with nan
             mask: "global/cutout_mask"
 
-patch_metadata:
-  config:
-    dataloader:
-      test:
-        dataset:
-          cutout:
-            - dataset: /store_new/mch/msopr/ml/datasets/mch-realch1-fdb-1km-2005-2025-1h-pl13-ifsnames-v1.0.zarr
-            - dataset: /store_new/mch/msopr/ml/datasets/aifs-ea-an-oper-0001-mars-n320-1979-2024-6h-v1-for-single-v2.zarr
+patch_metadata: resources/sgm-ich1-patch_metadata.yaml
